# rkboot

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.rst  Makefile  README.md  README.rst  aarch64-toolchain.cmake  adrctl-fields.txt  aslice-fields.txt  brompatch-mem.c  brompatch-spi.c  brompatch.c  coding-guidelines.rst  config.h  configure.py  cpu_onoff.S  dcache.S  ddrinit.c  default.nix  dramcfg.c  dslice-fields.txt  dump_clocks.c  dwmmc.c  elfloader.c  elfloader.h  entry.S  error.c  exc_handlers.S  fdt.h  gen_linkerscript.sh  gicv2.c  gicv3.S  linkerscript.ld  lpddr4.c  main.c  memorymap.c  memtest.c  mirror.c  mmu.c  moderegs.c  (+25 more)
aarch64/: context.S  exc_handlers.S  gicv3.S  mmu.S  save_restore.S  sched.S  string.S
aarch64/include/: aarch64.h  arch.h  asm.h  irq.h  sched_aarch64.h
aarch64/include/aarch64/: cortex_a53.h
aarch64/include/arch/: context.h
artifacts/: what-is-this.rst
cmake/: options.cmake
compression/: arch_mem_access.h  compression.c  compression.h  configure  inflate.c  lz4.c  lzcommon.c  zstd.c  zstd_fse.c  zstd_internal.h  zstd_literals.c  zstd_probe_literals.c  zstd_sequences.c  zstdsplit.c
dram/: adrctl-fields.txt  aslice-fields.txt  ddrinit.c  ddrinit.h  dramcfg.c  dslice-fields.txt  frequency.c  lpddr4.c  memorymap.c  mirror.c  moderegs.c  odt.c  pctl-fields.txt  phy-macros.txt  pi-fields.txt  read_size.c  rk3399-dmc.h  training.c
dramstage/: blk_emmc.c  blk_nvme.c  blk_sd.c  board_probe.c  boot_blockdev.c  commit.c  decompression.c  entropy.c  main.c  transform_fdt.c
drivers/include/hw/: dwc3.h
include/: aarch64.h  arch.h  asm.h  assert.h  async.h  cache.h  cortex_a53.h  defs.h  die.h  dump_mem.h  dwc3.h  dwc3_regs.h  dwmmc.h  dwmmc_dma.h  dwmmc_helpers.h  dwmmc_regs.h  endian.h  exc_handler.h  fdt.h  format.h  gic.h  gic_regs.h  iost.h  irq.h  lib.h  log.h  main.h  memaccess.h  mmc.h  mmu.h  nvme.h  nvme_regs.h  output.h  pci_regs.h  plat.h  rk-spi.h  rk3399.h  rkcrypto_v1_regs.h  rkgpio_regs.h  rki2c.h  (+21 more)
include/plat/: sched.h
include/rk3399/: base_mappings.inc.c  dramstage.h  payload.h  regmap.h  sramstage.h  usbstage.h  vmmap.h
include/std/: assert.h  inttypes.h  stdio.h  stdlib.h  string.h
ld/: 00100000.ld  00600000.ld  ff8c2000.ld  ff8c2004.ld
lib/: dcache.S  dump_fdt.c  dwc3.c  dwmmc.c  dwmmc_common.c  dwmmc_early.c  dwmmc_xfer.c  error.c  exc_handlers.S  gicv2.c  gicv3.S  mmu.c  nvme.c  nvme_xfer.c  rkspi.c  sched.c  sched_aarch64.S  sd.c  sdhci.c  sdhci_common.c  string.c  uart.c  uart16550a.c
lib/include/hw/: usb.h
lib/include/levinboot/: rc4.h
rk3399/: configure  cpu_onoff.S  debug.S  design.rst  entry.S  handlers.c  loader.S  memtest.c  openocd_rk3399.cfg  spi.c  stub-usb.S  teststage.c  usbstage-spi.c  usbstage.c
rk3399/include/: rk3399.h  stage.h
rk3399/include/rk3399/: base_mappings.inc.c  dram_size.h  dramstage.h  emmcphy.h  loader.h  payload.h  sramstage.h  usbstage.h  vmmap.h
rk356x/: configure  loader.S
sramstage/: embedded_dramstage.c  emmc_init.c  main.c  memtest.c  misc_init.c  pcie_init.c  pmu_cru.c  return_to_brom.c  sd_init.c  usb_loader-spi.c  usb_loader.c
tools/: CMakeLists.txt  Makefile  configure  idbtool.c  lbusb.c  load_file.c  lpddr4_spec_tables.h  regtool.c  regtool.h  regtool_rpn.c  tools.h  unpacktool.c  usbtool.c
tools/include/: lbpayload.h  load_file.h  rc4.h
tools/lbpayload/: elf.c  fit.c  layout.c  main.c
